...
                                                        <constraint firstAttribute="height" constant="20" id="Mzc-0f-bZv"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DJ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5iR-ow-GZZ">
                                                    <rect key="frame" x="90" y="83" width="286" height="15"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="15" id="g93-9f-lN9"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <nil key="textColor"/>
...
                            <constraint firstItem="MYC-XR-XNK" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="WC2-iI-aMF"/>
                            <constraint firstItem="Ram-1Q-inh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YrB-rb-EZx"/>
                            <constraint firstItem="MYC-XR-XNK" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cS1-Ao-1RW"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Channels" id="hVU-6v-unB">
                        <barButtonItem key="rightBarButtonItem" title="Filter" id="JC9-Ye-M6T">
                            <connections>
                                <action selector="selBtnFilter:" destination="BYZ-38-t0r" id="jpG-ez-qXT"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                                            <constraint firstAttribute="bottom" secondItem="NSi-Eq-Vez" secondAttribute="bottom" constant="5" id="yJQ-2J-O6z"/>
                                                        </constraints>
                                                    </view>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xd2-o0-8r6">
                                                        <rect key="frame" x="0.0" y="514" width="414" height="50"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36M-bj-DDW">
                                                                <rect key="frame" x="15.000000000000004" y="0.0" width="46.333333333333343" height="30"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="30" id="x5K-en-57k"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                <nil key="textColor"/>
...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WgU-J6-zG2">
                                        <rect key="frame" x="30" y="40" width="56" height="32"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="32" id="pmp-LY-knc"/>
                                        </constraints>
                                        <state key="normal" title="Cancel"/>
                                        <connections>
                                            <action selector="selBtnCancel:" destination="HgS-UT-vQg" eventType="touchUpInside" id="Tjx-lV-IfT"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
