...
    @IBOutlet weak var lblTitleDescription: UILabel!
    @IBOutlet weak var lblDescription: UILabel!
    @IBOutlet weak var viewDescription: UIView!

    enum labelTitles: String{
        case genre = "Genre"
        case description = "Desription"
        case numberOfListeners = "Number of Listener"

    }
    var channelViewModel: ChannelViewModel?
    let utilityQueue = DispatchQueue.global(qos: .utility)
    let mainQueue = DispatchQueue.main
    var channelImage = UIImage(named: "LargePlaceHolder")
...
