...
    enum urlStrings : String{
        case getChannel = "https://raw.githubusercontent.com/jvanaria/jvanaria.github.io/master/channels.json"
    }
    enum constants: String {
        case unknown = "Unknown"
        case titleDJ = "DJ"
        case titleSelect = "Select"
        case titleCancel = "Cancel"
        case all = "All"
        case tblChannelsAccessibility = "table--channlesTableView"
    }
    var alertView: UIAlertController?
    var pickerView: UIPickerView?
    let utilityQueue = DispatchQueue.global(qos: .utility)
    let mainQueue = DispatchQueue.main
    lazy var refresher : UIRefreshControl = {
...
